...
    return ChangeNotifierProvider(
      create: (_) => HomeNotifier(context: context)
        ..fetchRecipes(), // Fetch data saat halaman dibuat
      child: Consumer<HomeNotifier>(
        builder: (context, value, child) => Scaffold(
          appBar: AppBar(
            title: const Text("Home Page"),
            actions: [
              Row(
                children: [
                  TextButton(
                    onPressed: () async {
                      // Navigasi ke halaman Tambah Resep
...
